Fixed vertical align on custom form widget item links

--- a/themes/Rozier/static/css/widgets/customform_widget.less
+++ b/themes/Rozier/static/css/widgets/customform_widget.less
@@ -131,7 +131,7 @@
         .transition(0.4s right @easeOutExpo);
 
         .custom-form-link{ // a
-            display: inline-block;
+            display: inline-block; vertical-align: top;
             width:32px; height:32px;
             .rounded(0);
             color:#333;
